# solidflow-desktop

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  requirements-dev.txt  requirements.txt  solidflow.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DEV_GUIDE.md  FAQ.md  INSTALL.md  MVP_PROGRESS_REPORT.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  USER_GUIDE.md  architecture.md  development.md  features.md  mvp-plan.md  mvp-stage1-report.md  mvp-stage2-report.md  mvp-stage4-report.md  mvp-stage5-report.md  mvp-stage6-report.md  project-setup-plan.md  tech-stack.md
resources/icons/: README.md
scripts/: build.bat  build.sh  build_macos_app.sh  build_macos_app_debug.sh  create_test_models.py  format.bat  format.sh  lint.bat  lint.sh  setup.bat  setup.sh  test_full_cycle.py
src/solidflow/: __init__.py  __main__.py
src/solidflow/analysis/: __init__.py  statistics.py  validator.py
src/solidflow/core/: __init__.py  application.py  config.py  logging_setup.py
src/solidflow/geometry/: __init__.py
src/solidflow/geometry/mesh/: __init__.py  exporter.py  importer.py  processor.py
src/solidflow/gui/: __init__.py  main_window.py
src/solidflow/gui/viewport/: __init__.py  viewport3d.py
src/solidflow/gui/widgets/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_full_cycle.py
tests/unit/: __init__.py  test_basic.py  test_config.py  test_processor.py  test_statistics.py  test_validator.py  test_viewport.py
